# http-request-zabbix

./: Cargo.toml  README.md
examples/: login_with_password.rs  login_with_token.rs  string_request.rs
src/: lib.rs  main.rs
