[package]
name = "http-request-zabbix"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
uuid = { version = "1.21.0", features = ["v4"] }

[dev-dependencies]
mockito = "1.7.2"
